# cki

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yml
articles/: 2000-01-01-example.md
src/: client.rs  error.rs  frontmatter.rs  main.rs  opt.rs  parser.rs  path_finder.rs  server.rs
src/commands/: build.rs  mod.rs  serve.rs
src/handlers/: mod.rs  show_article.rs  show_feed.rs  show_sitemap.rs  show_top_page.rs
src/models/: article.rs  article_decorator.rs  mod.rs
static/css/: main.css
templates/: layout.html  show_article.html  show_feed.xml  show_top_page.html
