[package]
name = "cki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "cki"

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
askama = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
pulldown-cmark = "0.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
scraper = "0.13.0"
structopt = "0.3.25"
globwalk = "0.8.1"