[package]
name = "cki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "cki"

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.1"
actix-rt = "2.7.0"
awc = { version = "3.0.0-beta.21", features = ["rustls"] }
askama = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
pulldown-cmark = "0.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
scraper = "0.13.0"
structopt = "0.3.25"
globwalk = "0.8.1"